# lilasp-webgis

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html
auth-adapter/: Dockerfile  app.py  requirements.txt
auth-adapter/templates/: login.html
docs/adr/: 0001-raw-openlayers-over-polar-fork.md  0002-py-qgis-server-not-qjazz.md  0003-keep-qfc-sync.md  0004-vector-tile-eligibility-rule.md  0005-single-entry-point-nginx-proxy.md  0006-coolify-mcp-destination-limitation.md
docs/plan/: 00-planportal-vision.md
docs/research/: 01-stack-deep-dive.md
infra/coolify/: AUTHENTIK_SETUP.md  README.md  authentik-compose.yml
infra/postgres/: init.sql
infra/traefik/dynamic/: authentik.yaml  planportal-routes.yaml  planportal-transport.yaml
projects/: README.md
scripts/: bootstrap-demo.sh  dev-up.sh  sync-qfc-projects.py
services/auth-gateway/: Dockerfile  app.py  requirements.txt
services/indexer/: Dockerfile  pyproject.toml
services/indexer/src/indexer/: bake.py  caps_verify.py  config.py  db.py  eligibility.py  main.py  qfc_sync.py  qgs_parse.py  services_emit.py  zip_to_qgs.py
services/indexer/tests/: test_qgs_parse.py
services/martin/: config.yaml
services/qgis-server/: Dockerfile
services/qgis-server/config/: README.md
services/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
services/web/src/: app.ts  styles.css
stack-config/: api-gateway.conf  patch-config-generator.sh  pg_service.conf  qwc2-config.json  write-pg-service.sh
(+18 files in other folders)
