[project]
name = "planportal-indexer"
version = "0.1.0"
description = "Watches /srv/gis, parses QGIS projects, emits services.json, bakes vector tiles."
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29",
    "httpx>=0.27",
    "watchfiles>=0.22",
    "redis>=5.0",
    "structlog>=24.1",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
